Adds myself as maintainer, expands gitignore

--- a/vignettes/Discordant_vignette.Rnw
+++ b/vignettes/Discordant_vignette.Rnw
@@ -28,6 +28,7 @@
 \author{Charlotte Siska and Katerina Kechris}
 
 \begin{document}
+\SweaveOpts{concordance=TRUE}
 
 \maketitle
 <<options,echo=FALSE>>=
